--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-i18next": "^11.8.5",
     "react-native": "0.63.4",
     "react-native-appearance": "^0.3.4",
+    "react-native-flash-message": "^0.1.23",
     "react-native-flipper": "^0.64.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.14.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-flipper": "^1.4.2",
